# LinktoText

./: .gitignore  CHANGELOG.md  LICENSE  README.md  link-to-text-desktop.tsx  next.config.js  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: build.yml
docs/: DEVELOPMENT.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  generate-icons.sh  icon.icns  placeholder-icons.md
src/app/: layout.tsx  page.tsx
src/components/: LinkToTextDesktop.tsx
